--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,3 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
-h4 {
-  overflow: hidden;
-}
